force-app/main/default/objects/Program__c.object
<CustomObject>
    <description>[Business] Programs are announced by the Agencies to publish the Announcements against which applications can be submitted to apply for Grants</description>
    <label>Solicitation</label>
    <nameField>
        <label>Solicitation EGMS ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Solicitations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>