force-app/main/default/objects/Program__c/fields/Abbreviation__c.field-meta.xml
<CustomField>
    <fullName>Abbreviation__c</fullName>
    <description>An abbreviation of the program name.
used for GOVSBIR</description>
    <label>Abbreviation</label>
    <length>5</length>
    <type>Text</type>
</CustomField>