force-app/main/default/objects/Program__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Division of the organization to which the User Belongs</description>
    <label>Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Programs</relationshipName>
    <type>Lookup</type>
</CustomField>