force-app/main/default/objects/Program__c/fields/AccountIdentification__c.field-meta.xml
<CustomField>
    <fullName>AccountIdentification__c</fullName>
    <label>Account Identification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>