force-app/main/default/objects/Program__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <formula>PointOfContact__r.Street + PointOfContact__r.City +  PointOfContact__r.State + 
PointOfContact__r.Country</formula>
    <label>X_Address</label>
    <type>Text</type>
</CustomField>