force-app/main/default/objects/Program__c/fields/AnswerCloseDate__c.field-meta.xml
<CustomField>
    <fullName>AnswerCloseDate__c</fullName>
    <description>Created and used for GOVSBIR</description>
    <label>Answer Close Date</label>
    <type>Date</type>
</CustomField>