force-app/main/default/objects/Program__c/fields/Appeals__c.field-meta.xml
<CustomField>
    <fullName>Appeals__c</fullName>
    <label>Appeals</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>