force-app/main/default/objects/Program__c/fields/ApplicantEligibility__c.field-meta.xml
<CustomField>
    <fullName>ApplicantEligibility__c</fullName>
    <label>Applicant Eligibility</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>