force-app/main/default/objects/Program__c/fields/ApplicantTypes__c.field-meta.xml
<CustomField>
    <fullName>ApplicantTypes__c</fullName>
    <inlineHelpText>Refers Custom Setting Picklist to get values</inlineHelpText>
    <label>X_Applicant Type(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>