force-app/main/default/objects/Program__c/fields/ApplicationProcedures__c.field-meta.xml
<CustomField>
    <fullName>ApplicationProcedures__c</fullName>
    <label>Application Procedures</label>
    <length>25000</length>
    <type>LongTextArea</type>
</CustomField>