force-app/main/default/objects/Program__c/fields/Approver3__c.field-meta.xml
<CustomField>
    <fullName>Approver3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>X_Approver 3</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Programs2</relationshipName>
    <type>Lookup</type>
</CustomField>