force-app/main/default/objects/Program__c/fields/Approver4__c.field-meta.xml
<CustomField>
    <fullName>Approver4__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>X_Approver 4</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Programs3</relationshipName>
    <type>Lookup</type>
</CustomField>