force-app/main/default/objects/Program__c/fields/Audits__c.field-meta.xml
<CustomField>
    <fullName>Audits__c</fullName>
    <label>Audits</label>
    <length>25000</length>
    <type>LongTextArea</type>
</CustomField>