force-app/main/default/objects/Program__c/fields/Authorization__c.field-meta.xml
<CustomField>
    <fullName>Authorization__c</fullName>
    <label>Authorization</label>
    <type>TextArea</type>
</CustomField>