force-app/main/default/objects/Program__c/fields/AuthorizedSignatory__c.field-meta.xml
<CustomField>
    <fullName>AuthorizedSignatory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>used for GOVSBIR</description>
    <label>Authorized Signatory</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Solicitations</relationshipLabel>
    <relationshipName>Programs</relationshipName>
    <type>Lookup</type>
</CustomField>