force-app/main/default/objects/Program__c/fields/AwardingAgencyText__c.field-meta.xml
<CustomField>
    <fullName>AwardingAgencyText__c</fullName>
    <formula>Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>B_Agency</label>
    <type>Text</type>
</CustomField>