force-app/main/default/objects/Program__c/fields/AwardProcedure__c.field-meta.xml
<CustomField>
    <fullName>AwardProcedure__c</fullName>
    <label>Award Procedure</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>