force-app/main/default/objects/Program__c/fields/AwardType__c.field-meta.xml
<CustomField>
    <fullName>AwardType__c</fullName>
    <description>Defines the type of award mandated by congressional intent.</description>
    <label>Award Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No values defined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>