force-app/main/default/objects/Program__c/fields/BeneficiaryEligibility__c.field-meta.xml
<CustomField>
    <fullName>BeneficiaryEligibility__c</fullName>
    <label>Beneficiary Eligibility</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>