force-app/main/default/objects/Program__c/fields/BuildupFunctionalityNeeded__c.field-meta.xml
<CustomField>
    <fullName>BuildupFunctionalityNeeded__c</fullName>
    <description>This value decides whether to use build up functionality in budget grid for specific program in Award.</description>
    <label>Build-up Functionality Needed?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>