force-app/main/default/objects/Program__c/fields/CFDASource__c.field-meta.xml
<CustomField>
    <fullName>CFDASource__c</fullName>
    <formula>IF( RecordType.DeveloperName = &apos;ExternalProgram&apos;, &apos;SAM.gov&apos;, &apos;Not Applicable&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assistance Listing # Source</label>
    <type>Text</type>
</CustomField>