force-app/main/default/objects/Program__c/fields/CloseDate__c.field-meta.xml
<CustomField>
    <fullName>CloseDate__c</fullName>
    <description>Created and used for GOVSBIR</description>
    <label>Close Date</label>
    <type>Date</type>
</CustomField>