force-app/main/default/objects/Program__c/fields/CredentialsDocumentation__c.field-meta.xml
<CustomField>
    <fullName>CredentialsDocumentation__c</fullName>
    <label>Credentials/Documentation</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>