force-app/main/default/objects/Program__c/fields/CriteriaforSelectingProposals__c.field-meta.xml
<CustomField>
    <fullName>CriteriaforSelectingProposals__c</fullName>
    <label>Criteria For Selecting Proposals</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>