force-app/main/default/objects/Program__c/fields/Deadlines__c.field-meta.xml
<CustomField>
    <fullName>Deadlines__c</fullName>
    <label>Deadlines</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>