force-app/main/default/objects/Program__c/fields/DisableRiskBtn__c.field-meta.xml
<CustomField>
    <fullName>DisableRiskBtn__c</fullName>
    <formula>ISPICKVAL(Status__c,&apos;Closed&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>X_Disable Risk Btn</label>
    <type>Checkbox</type>
</CustomField>