force-app/main/default/objects/Program__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <description>Created and used for GOVSBIR</description>
    <label>Division</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aeronautics Research Mission Directorate</fullName>
            </value>
            <value>
                <fullName>Exploration Systems Development Mission Directorate</fullName>
            </value>
            <value>
                <fullName>Science Mission Directorate</fullName>
            </value>
            <value>
                <fullName>Space Technology Mission Directorate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>