force-app/main/default/objects/Program__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <formula>HYPERLINK(&apos;mailto:&apos;+PointOfContact__r.Email,PointOfContact__r.Email)</formula>
    <label>X_Email</label>
    <type>Text</type>
</CustomField>