force-app/main/default/objects/Program__c/fields/EmailTemplate__c.field-meta.xml
<CustomField>
    <fullName>EmailTemplate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>X_Email Template Config</label>
    <referenceTo>GNT__EmailTemplateConfig__c</referenceTo>
    <relationshipName>Programs</relationshipName>
    <type>Lookup</type>
</CustomField>