force-app/main/default/objects/Program__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <description>End date of the program, to determine if it is a single or a multi year program</description>
    <label>X_End Date</label>
    <type>Date</type>
</CustomField>