force-app/main/default/objects/Program__c/fields/EvaluationEndDate__c.field-meta.xml
<CustomField>
    <fullName>EvaluationEndDate__c</fullName>
    <description>Created and used for GOVSBIR</description>
    <label>Evaluation End Date</label>
    <type>Date</type>
</CustomField>