force-app/main/default/objects/Program__c/fields/EvaluationStartDate__c.field-meta.xml
<CustomField>
    <fullName>EvaluationStartDate__c</fullName>
    <description>Created and used for GOVSBIR</description>
    <label>Evaluation Start Date</label>
    <type>Date</type>
</CustomField>