force-app/main/default/objects/Program__c/fields/ExecutiveApprover__c.field-meta.xml
<CustomField>
    <fullName>ExecutiveApprover__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Use this field to assign Executive user from Roles and responsibilities.</description>
    <label>X_Executive Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ProgramsExecutiveApprovers</relationshipName>
    <type>Lookup</type>
</CustomField>