force-app/main/default/objects/Program__c/fields/FederalProgramCFDA__c.field-meta.xml
<CustomField>
    <fullName>FederalProgramCFDA__c</fullName>
    <inlineHelpText>Field should allow only numbers up-to 50 digits.</inlineHelpText>
    <label>Assistance Listing #</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>