force-app/main/default/objects/Program__c/fields/FederalProgramName__c.field-meta.xml
<CustomField>
    <fullName>FederalProgramName__c</fullName>
    <label>X_Program Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>