force-app/main/default/objects/Program__c/fields/FederalProgramTitle__c.field-meta.xml
<CustomField>
    <fullName>FederalProgramTitle__c</fullName>
    <label>Program Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>