force-app/main/default/objects/Program__c/fields/FormulaandMatchingRequirements__c.field-meta.xml
<CustomField>
    <fullName>FormulaandMatchingRequirements__c</fullName>
    <label>Formula And Matching Requirements</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>