force-app/main/default/objects/Program__c/fields/FundedAmount__c.field-meta.xml
<CustomField>
    <fullName>FundedAmount__c</fullName>
    <label>X_Funded Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>