force-app/main/default/objects/Program__c/fields/FunderType__c.field-meta.xml
<CustomField>
    <fullName>FunderType__c</fullName>
    <description>The field is to be removed. Based on selection of the primary funding organization funder type should get selected automatically. Hence creating a formula field PrimaryFunderType__c - Bhushan</description>
    <label>(Obsolate)Funder Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Federal</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>NGO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>