force-app/main/default/objects/Program__c/fields/HeadquartersOffice__c.field-meta.xml
<CustomField>
    <fullName>HeadquartersOffice__c</fullName>
    <label>Headquarters Office</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>