force-app/main/default/objects/Program__c/fields/HideDeleteBtn__c.field-meta.xml
<CustomField>
    <fullName>HideDeleteBtn__c</fullName>
    <formula>(ISPICKVAL(Status__c,&apos;Active&apos;)||ISPICKVAL(Status__c,&apos;Disapproved&apos;)) || $Profile.Name == &apos;CTR&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>X_Hide Delete Btn</label>
    <type>Checkbox</type>
</CustomField>