force-app/main/default/objects/Program__c/fields/HideDeleteButton__c.field-meta.xml
<CustomField>
    <fullName>HideDeleteButton__c</fullName>
    <description>Logic for Hiding Delete Button</description>
    <formula>AND((TEXT(Status__c) != &apos;Created&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Logic for Hiding Delete Button</inlineHelpText>
    <label>B_Hide Delete Button</label>
    <type>Checkbox</type>
</CustomField>