force-app/main/default/objects/Program__c/fields/HideEditBtn__c.field-meta.xml
<CustomField>
    <fullName>HideEditBtn__c</fullName>
    <formula>$User.Id != OwnerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>B_Hide Edit Btn</label>
    <type>Checkbox</type>
</CustomField>