force-app/main/default/objects/Program__c/fields/HideEditButtonReviewer__c.field-meta.xml
<CustomField>
    <fullName>HideEditButtonReviewer__c</fullName>
    <formula>OR(
AND(
NOT(ISPICKVAL(Status__c, &apos;Created&apos;)),
NOT(ISPICKVAL(Status__c, &apos;Being Amended&apos;)),
NOT(ISPICKVAL(Status__c, &apos;Reviewed&apos;)),
NOT(ISPICKVAL(Status__c, &apos;Submitted for Review&apos;))
),
AND(
$User.Id != OwnerId,
OR(ISBLANK(ReviewerIds__c),NOT(CONTAINS(ReviewerIds__c, $User.Id)))
)
)</formula>
    <label>X_HideEditButton for Reviewers</label>
    <type>Checkbox</type>
</CustomField>