force-app/main/default/objects/Program__c/fields/HideEditDelete__c.field-meta.xml
<CustomField>
    <fullName>HideEditDelete__c</fullName>
    <formula>AND(
  OR(
    ISPICKVAL(Status__c,&apos;Active&apos;),
    ISPICKVAL(Status__c,&apos;Approved&apos;),
    ISPICKVAL(Status__c,&apos;Submitted for Approval&apos;),
    ISPICKVAL(Status__c,&apos;Disapproved&apos;)
  ),
  $Profile.Name != &apos;System Administrator&apos;
)</formula>
    <label>X_HideEditDelete</label>
    <type>Checkbox</type>
</CustomField>