force-app/main/default/objects/Program__c/fields/HideEditDeleteBtn__c.field-meta.xml
<CustomField>
    <fullName>HideEditDeleteBtn__c</fullName>
    <description>AND((TEXT(Status__c) != &apos;Created&apos;), (TEXT(Status__c) != &apos;Being Amended&apos;))</description>
    <formula>NOT(
AND(
OR(
TEXT(Status__c) = &apos;Created&apos;,TEXT(Status__c) = &apos;Being Amended&apos;), 
$User.Id = OwnerId)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>X_Hide Edit Delete Btn</label>
    <type>Checkbox</type>
</CustomField>