force-app/main/default/objects/Program__c/fields/HideFocusAreaTable__c.field-meta.xml
<CustomField>
    <fullName>HideFocusAreaTable__c</fullName>
    <formula>ISPICKVAL(FocusAreaRequired__c,&apos;No&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>B_HideFocusAreaTable</label>
    <type>Checkbox</type>
</CustomField>