force-app/main/default/objects/Program__c/fields/HideKPITable__c.field-meta.xml
<CustomField>
    <fullName>HideKPITable__c</fullName>
    <formula>ISPICKVAL(KPIsRequired__c,&apos;No&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>B_HideKPITable</label>
    <type>Checkbox</type>
</CustomField>