force-app/main/default/objects/Program__c/fields/HideObjectiveTable__c.field-meta.xml
<CustomField>
    <fullName>HideObjectiveTable__c</fullName>
    <formula>ISPICKVAL(IsGoalsRequired__c,&apos;No&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>B_HideObjectiveTable</label>
    <type>Checkbox</type>
</CustomField>