force-app/main/default/objects/Program__c/fields/HideWBS__c.field-meta.xml
<CustomField>
    <fullName>HideWBS__c</fullName>
    <formula>ISPICKVAL( IsWBSRequired__c , &apos;No&apos;)</formula>
    <label>B_HideWBS</label>
    <type>Checkbox</type>
</CustomField>