force-app/main/default/objects/Program__c/fields/IntermediateAccount__c.field-meta.xml
<CustomField>
    <fullName>IntermediateAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>State Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Programs3</relationshipName>
    <type>Lookup</type>
</CustomField>