force-app/main/default/objects/Program__c/fields/InternalOrganization__c.field-meta.xml
<CustomField>
    <fullName>InternalOrganization__c</fullName>
    <description>Created to show up on the portal</description>
    <label>Internal Organization</label>
    <length>255</length>
    <type>Text</type>
</CustomField>