force-app/main/default/objects/Program__c/fields/IsGoalsRequired__c.field-meta.xml
<CustomField>
    <fullName>IsGoalsRequired__c</fullName>
    <description>used for GOVSBIR</description>
    <label>Objectives Required?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>