force-app/main/default/objects/Program__c/fields/IsOwner__c.field-meta.xml
<CustomField>
    <fullName>IsOwner__c</fullName>
    <formula>OwnerId == $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>B_Is Owner</label>
    <type>Checkbox</type>
</CustomField>