force-app/main/default/objects/Program__c/fields/IsProjectServiceAreaneeded__c.field-meta.xml
<CustomField>
    <fullName>IsProjectServiceAreaneeded__c</fullName>
    <description>This directs user to whether user Project/Service Area or not use it.</description>
    <label>Is Project/Service Area Needed?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>