force-app/main/default/objects/Program__c/fields/IsRecordRecalled__c.field-meta.xml
<CustomField>
    <fullName>IsRecordRecalled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag will will true if record is sent to owner</description>
    <label>B_IsRecordRecalled?</label>
    <type>Checkbox</type>
</CustomField>