force-app/main/default/objects/Program__c/fields/IsReviewer__c.field-meta.xml
<CustomField>
    <fullName>IsReviewer__c</fullName>
    <description>Used for hide logic on UI</description>
    <formula>CONTAINS(ReviewerIds__c,$User.Id)</formula>
    <label>B_Is Reviewer</label>
    <type>Checkbox</type>
</CustomField>