force-app/main/default/objects/Program__c/fields/IsWBSRequired__c.field-meta.xml
<CustomField>
    <fullName>IsWBSRequired__c</fullName>
    <label>Is WBS Required?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>