force-app/main/default/objects/Program__c/fields/KPIsRequired__c.field-meta.xml
<CustomField>
    <fullName>KPIsRequired__c</fullName>
    <description>used for GOVSBIR</description>
    <label>KIPs Required?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>IsGoalsRequired__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>