force-app/main/default/objects/Program__c/fields/LastApprover__c.field-meta.xml
<CustomField>
    <fullName>LastApprover__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>B_Last Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Programs4</relationshipName>
    <type>Lookup</type>
</CustomField>