force-app/main/default/objects/Program__c/fields/LengthandTimePhasingofAssistance__c.field-meta.xml
<CustomField>
    <fullName>LengthandTimePhasingofAssistance__c</fullName>
    <label>Length And Time Phasing Of Assistance</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>