force-app/main/default/objects/Program__c/fields/NumberOfApprovalSteps__c.field-meta.xml
<CustomField>
    <fullName>NumberOfApprovalSteps__c</fullName>
    <label>X_Number of Approval Steps</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>