force-app/main/default/objects/Program__c/fields/Obligations__c.field-meta.xml
<CustomField>
    <fullName>Obligations__c</fullName>
    <label>Obligations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>