force-app/main/default/objects/Program__c/fields/OrganizationName__c.field-meta.xml
<CustomField>
    <fullName>OrganizationName__c</fullName>
    <formula>Account__r.Name</formula>
    <label>X_Organization Name</label>
    <type>Text</type>
</CustomField>