force-app/main/default/objects/Program__c/fields/ParentShortName__c.field-meta.xml
<CustomField>
    <fullName>ParentShortName__c</fullName>
    <label>X_Parent Short Name</label>
    <length>15</length>
    <type>Text</type>
</CustomField>