force-app/main/default/objects/Program__c/fields/Phase__c.field-meta.xml
<CustomField>
    <fullName>Phase__c</fullName>
    <description>Created and used for GOVSBIR</description>
    <label>Phase</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Phase I</fullName>
            </value>
            <value>
                <fullName>Phase II</fullName>
            </value>
            <value>
                <fullName>Direct to Phase II</fullName>
            </value>
            <value>
                <fullName>CCRPP</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>