force-app/main/default/objects/Program__c/fields/PointOfContact__c.field-meta.xml
<CustomField>
    <fullName>PointOfContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>X_Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Programs</relationshipName>
    <type>Lookup</type>
</CustomField>