force-app/main/default/objects/Program__c/fields/PreapplicationCoordination__c.field-meta.xml
<CustomField>
    <fullName>PreapplicationCoordination__c</fullName>
    <label>Preapplication Coordination</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>