force-app/main/default/objects/Program__c/fields/PreReleaseDate__c.field-meta.xml
<CustomField>
    <fullName>PreReleaseDate__c</fullName>
    <description>Created for used for GOVSBIR</description>
    <label>Pre-Release Date</label>
    <type>Date</type>
</CustomField>