force-app/main/default/objects/Program__c/fields/PrimaryFunderType__c.field-meta.xml
<CustomField>
    <fullName>PrimaryFunderType__c</fullName>
    <description>used for GOVSBIR</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>