force-app/main/default/objects/Program__c/fields/PrimaryFundingOrganization__c.field-meta.xml
<CustomField>
    <fullName>PrimaryFundingOrganization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Primary Funding Organization</description>
    <label>Primary Funding Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Programs2</relationshipName>
    <type>Lookup</type>
</CustomField>