force-app/main/default/objects/Program__c/fields/ProgramAccomplishments__c.field-meta.xml
<CustomField>
    <fullName>ProgramAccomplishments__c</fullName>
    <label>Program Accomplishments</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>