force-app/main/default/objects/Program__c/fields/ProgramApprover__c.field-meta.xml
<CustomField>
    <fullName>ProgramApprover__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>X_Program Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Programs1</relationshipName>
    <type>Lookup</type>
</CustomField>