force-app/main/default/objects/Program__c/fields/ProgramCFDA__c.field-meta.xml
<CustomField>
    <fullName>ProgramCFDA__c</fullName>
    <formula>HYPERLINK($Setup.GNT__GlobalConfig__c.GNT__InternalURLDomain__c &amp; Id, FederalProgramCFDA__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>X_Federal Program CFDA #</label>
    <type>Text</type>
</CustomField>