force-app/main/default/objects/Program__c/fields/ProgramName__c.field-meta.xml
<CustomField>
    <fullName>ProgramName__c</fullName>
    <description>This stores the Title of Program
used for GOVSBIR</description>
    <label>Solicitation Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>