force-app/main/default/objects/Program__c/fields/ProgramNameText__c.field-meta.xml
<CustomField>
    <fullName>ProgramNameText__c</fullName>
    <label>X_Program Name Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>