force-app/main/default/objects/Program__c/fields/ProgramNumberFormula__c.field-meta.xml
<CustomField>
    <fullName>ProgramNumberFormula__c</fullName>
    <formula>IF(ISBLANK(FederalProgramCFDA__c), Name, FederalProgramCFDA__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Number</label>
    <type>Text</type>
</CustomField>