force-app/main/default/objects/Program__c/fields/ProgramSBIR__c.field-meta.xml
<CustomField>
    <fullName>ProgramSBIR__c</fullName>
    <description>Created and used for GOVSBIR</description>
    <label>Program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SBIR</fullName>
            </value>
            <value>
                <fullName>STTR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>