force-app/main/default/objects/Program__c/fields/ProgramSubType__c.field-meta.xml
<CustomField>
    <fullName>ProgramSubType__c</fullName>
    <description>Dependent picklist for program Type</description>
    <label>Program Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Project Grants</fullName>
                <default>true</default>
                <label>Project Grants</label>
            </value>
            <value>
                <fullName>Research Grants</fullName>
            </value>
            <value>
                <fullName>Formula Grants</fullName>
            </value>
            <value>
                <fullName>Block Grant</fullName>
            </value>
            <value>
                <fullName>Earmark Grant</fullName>
            </value>
            <value>
                <fullName>Emergency Grants</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>