force-app/main/default/objects/Program__c/fields/ProgramTitle__c.field-meta.xml
<CustomField>
    <fullName>ProgramTitle__c</fullName>
    <description>When we search NGO Program the Title field is getting blank on the table. so we need to create one Formula filed for rendering the title Name.
(old Display filed name-- FederalProgramTitle__c)</description>
    <formula>if(RecordType.Name ==&apos;External Program&apos;,FederalProgramTitle__c,ProgramName__c)</formula>
    <label>X_ProgramTitle</label>
    <type>Text</type>
</CustomField>