force-app/main/default/objects/Program__c/fields/ProgramTitleFormula__c.field-meta.xml
<CustomField>
    <fullName>ProgramTitleFormula__c</fullName>
    <formula>IF(ISBLANK(FederalProgramTitle__c), ProgramName__c,FederalProgramTitle__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Title</label>
    <type>Text</type>
</CustomField>