force-app/main/default/objects/Program__c/fields/ProgramTitleGrantee__c.field-meta.xml
<CustomField>
    <fullName>ProgramTitleGrantee__c</fullName>
    <formula>IF(RecordType.Name = &apos;External Program&apos;, FederalProgramTitle__c, ProgramName__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>X_ProgramTitleGrantee</label>
    <type>Text</type>
</CustomField>