force-app/main/default/objects/Program__c/fields/ProgramType__c.field-meta.xml
<CustomField>
    <fullName>ProgramType__c</fullName>
    <description>The type of program.</description>
    <label>Program Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Grant</fullName>
                <default>true</default>
                <label>Grant</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>