force-app/main/default/objects/Program__c/fields/ProjectPeriod__c.field-meta.xml
<CustomField>
    <fullName>ProjectPeriod__c</fullName>
    <formula>IF(AND(NOT(ISBLANK(EndDate__c)),NOT(ISBLANK(StartDate__c))), TEXT(MONTH(StartDate__c))+&quot;/&quot; +TEXT(DAY(StartDate__c))+&quot;/&quot; +TEXT(YEAR(StartDate__c)) &amp; &quot; To &quot; &amp; TEXT(MONTH(EndDate__c))+&quot;/&quot; +TEXT(DAY(EndDate__c))+&quot;/&quot; +TEXT(YEAR(EndDate__c)), &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>X_Project Period</label>
    <type>Text</type>
</CustomField>