force-app/main/default/objects/Program__c/fields/ProjectTitle__c.field-meta.xml
<CustomField>
    <fullName>ProjectTitle__c</fullName>
    <label>X_Project Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>