force-app/main/default/objects/Program__c/fields/ProposalDueDate__c.field-meta.xml
<CustomField>
    <fullName>ProposalDueDate__c</fullName>
    <description>Created and used for GOVSBIR</description>
    <label>Proposal Due Date</label>
    <type>Date</type>
</CustomField>