force-app/main/default/objects/Program__c/fields/PublishedDate__c.field-meta.xml
<CustomField>
    <fullName>PublishedDate__c</fullName>
    <label>Published Date</label>
    <type>Date</type>
</CustomField>